--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
     <title>Eid Mubarak In Advance</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <div class="main"></div>
+    <div class="heading">
+        <h1 id="head">EID MUBARAK IN ADVANCE</h1>
+    </div>
+    <div class="time" style="background-color:cornsilk;">
