--- a/index.html
+++ b/index.html
@@ -14,3 +14,16 @@
         <h1 id="head">EID MUBARAK IN ADVANCE</h1>
     </div>
     <div class="time" style="background-color:cornsilk;">
+<h2>REMAINING TIME LEFT IN EID!</h2>
+        <div>
+            <p id="days"></p>
+        </div>
+        <div>
+            <p id="hours"></p>
+        </div>
+        <div>
+            <p id="minutes"></p>
+        </div>
+        <div>
+            <p id="seconds"></p>
+        </div>
