--- a/index.html
+++ b/index.html
@@ -27,3 +27,10 @@
         <div>
             <p id="seconds"></p>
         </div>
+ </div>
+    </div>
+    <center>
+        <div class="img">
+            <img src="imgs/img2.gif" alt="bakra eid" onclick="src='imgs/img3.gif'" onmouseover="src='imgs/img.jpg'" ondblclick="'imgs/img2.gif'">
+            
+    </center>
