--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <center>
         <div class="img">
-            <img src="imgs/img2.gif" alt="bakra eid" onclick="src='imgs/img3.gif'" onmouseover="src='imgs/img.jpg'" ondblclick="'imgs/img2.gif'">
+            <img src="img2.gif" alt="bakra eid" onclick="src='img3.gif'" onmouseover="src='img.jpg'" onmouseout="'img2.gif'">
             
     </center>
         
